# SmartScrapeNLP

./: .replit  app.py  models.py  pyproject.toml  replit.nix
data/web_scraper_data_20241129_212507/www_canorml_org/text/: content_20241129_212511.html
data/web_scraper_data_20241129_212507/www_leafly_com/text/: content_20241129_212509.html
data/web_scraper_data_20241129_212507/www_projectcbd_org/text/: content_20241129_212510.html
data/web_scraper_data_20241129_212544/www_astro_com/text/: content_20241129_212546.html
data/web_scraper_data_20241129_212544/www_astrology_com/text/: content_20241129_212547.html
data/web_scraper_data_20241129_212544/www_astrologyzone_com/text/: content_20241129_212553.html
data/web_scraper_data_20241129_212544/www_astroseek_com/text/: content_20241129_212552.html
data/web_scraper_data_20241129_212544/www_cafeastrology_com/text/: content_20241129_212550.html
data/web_scraper_data_20241129_212544/www_tarot_com/text/: content_20241129_212551.html
instance/: scraper.db
scraper/: __init__.py  content_analyzer.py  web_crawler.py
static/css/: main.css
static/js/: chat.js
templates/: index.html
utils/: file_manager.py  llm_handler.py
